# jupyter-notebook-naming-hook

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: enforce_notebook_naming.py
