[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "jupyter-notebook-naming-hook"
version = "0.1.0"
description = "A pre-commit hook to enforce naming conventions for Jupyter notebooks."
authors = [{ name = "Evan McKinney", email = "evmckinney9@gmail.com" }]

[project.scripts]
enforce_notebook_naming = "hooks.enforce_notebook_naming:main"
